# Windows-Process-CPU-Affinity-Auto

./: .gitignore  ADMIN_CHECK_SUMMARY.md  ALPHA_COMPLETE.md  ALPHA_SUMMARY.md  CHANGELOG.md  Cargo.toml  DEPLOY.md  IMPLEMENTATION.md  PRIVILEGE_CHECK.md  QUICKSTART.md  README.md  SERVICE_MODE.md  config.toml  install_service.ps1  uninstall_service.ps1
.claude/: settings.local.json
.specify/memory/: constitution.md
src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs  settings.rs  watcher.rs
src/cpu/: affinity.rs  detector.rs  mod.rs  types.rs
src/process/: cache.rs  manager.rs  mod.rs  monitor.rs
src/service/: mod.rs  runner.rs  service_manager.rs
src/utils/: error.rs  logger.rs  mod.rs  privilege.rs
