[package]
name = "process_cpu_auto"
version = "0.2.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
] }
windows-service = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
fern = "0.6"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
lazy_static = "1.4"
regex = "1.10"
wildmatch = "2.1"
notify = "6.1"

[profile.release]
opt-level = 3
lto = true
strip = true
